--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,10 @@
 service: serverless-code-test
 
-frameworkVersion: ">=2.0.0"
+frameworkVersion: "^3"
 
 provider:
   name: aws
-  runtime: nodejs14.x
+  runtime: nodejs18.x
   memorySize: 128
   timeout: 60
   stage: dev
@@ -26,8 +26,6 @@ plugins:
 
 custom:
   serverless-offline:
-    port: 3001
-    babelOptions:
-      presets: ["env"]
+    httpPort: 3001
   webpackIncludeModules:
     packagePath: './package.json'
