--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "json-loader": "^0.5.7",
     "mocha": "6.1.4",
     "path": "^0.12.7",
+    "serverless": "^3.36.0",
     "serverless-mocha-plugin": "^1.3.5",
     "serverless-offline": "5.8.0",
     "serverless-webpack": "5.3.1",
