--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "path": "^0.12.7",
     "serverless": "^3.36.0",
     "serverless-mocha-plugin": "^1.12.0",
-    "serverless-offline": "5.8.0",
+    "serverless-offline": "^13.2.0",
     "serverless-webpack": "5.3.1",
     "uglifyjs-webpack-plugin": "2.1.3",
     "webpack": "4.36.1",
