--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "serverless": "^3.36.0",
     "serverless-mocha-plugin": "^1.12.0",
     "serverless-offline": "^13.2.0",
-    "serverless-webpack": "5.3.1",
+    "serverless-webpack": "^5.13.0",
     "uglifyjs-webpack-plugin": "2.1.3",
     "webpack": "4.36.1",
     "webpack-node-externals": "^1.6.0"
