--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "serverless-offline": "^13.2.0",
     "serverless-webpack": "^5.13.0",
     "uglifyjs-webpack-plugin": "2.1.3",
-    "webpack": "4.36.1",
+    "webpack": "^5.89.0",
     "webpack-node-externals": "^1.6.0"
   },
   "dependencies": {
