--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "webpack": "^5.89.0",
     "webpack-node-externals": "^1.6.0"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "@comicrelief/lambda-wrapper": "^1.10.2",
     "request": "^2.88.0",
