--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@babel/register": "7.5.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.2",
-    "babel-loader": "8.0.6",
+    "babel-loader": "^8.3.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
