Install aws-sdk
Peer dependency of `@comicrelief/lambda-wrapper`

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@comicrelief/lambda-wrapper": "^1.10.2",
+    "aws-sdk": "^2.1492.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.5"
   }
