Adds required calls to lambda for postcode lookup

--- a/serverless/functions/postcode.yml
+++ b/serverless/functions/postcode.yml
@@ -2,6 +2,6 @@ postcode:
   handler: handler.postcode
   events:
     - http:
-        path: postcode/{postCode}
+        path: postcode/{postCodeParamString}
         method: get
         cors: true
